Holder list error fix required. Profiles are not showing up

--- a/src/app/feed/feed.component.css
+++ b/src/app/feed/feed.component.css
@@ -187,7 +187,7 @@
     height: auto;
     padding-bottom: 10%;
     min-width: unset;
-    max-width: 400px;
+    max-width: unset;
   }
 
   .feed-container {
